--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ anyio==3.6.1
 apischema==0.16.6
 attrs==21.4.0
 autopep8==1.6.0
+backports.zoneinfo==0.2.1
 based58==0.1.1
 cachetools==4.2.4
 certifi==2022.5.18.1
@@ -18,8 +19,11 @@ jsonrpcclient==4.0.2
 jsonrpcserver==5.0.7
 jsonschema==4.6.0
 OSlash==0.6.3
+psycopg==3.0.14
+psycopg-c==3.0.14
 pycodestyle==2.8.0
 pyrsistent==0.18.1
+python-dotenv==0.20.0
 requests==2.28.0
 rfc3986==1.5.0
 sniffio==1.2.0
